# ollama-adk-samples

./: Makefile  README-HOTPATCH.md  llms-full.txt  patch_openinference.py  pyproject.toml  skills.prd
.agent/rules/: 01-environment-uv.md  02-backend-fastapi-adk.md  03-frontend-react-mui.md  05-project-structure.md
RAG/: README.md  pyproject.toml
RAG/eval/: README.md  migrate_eval_data.py  test_eval.py  test_eval_phoenix.py
RAG/eval/data/: conversation.test.1.evalset.json  conversation.test.1.json
RAG/notebooks/: analyze-data.ipynb  load-data.ipynb
RAG/rag_agent/: agent.py  prompts.py  tools.py  tracing.py
academic_research/: README.md
academic_research/acedemic_research/: agent.py  callbacks.py  config.py
academic_research/acedemic_research/sub_agents/academic_newresearch/: agent.py  prompt.py
academic_research/acedemic_research/sub_agents/academic_websearch/: agent.py  prompt.py
academic_research/acedemic_research/sub_agents/academic_websearch/searxng_mcp/: README.md  connector.py  server.py
academic_research/acedemic_research/sub_agents/academic_websearch/searxng_mcp/notebooks/: test_server.ipynb
agent_skills_tutorial/: README.md
agent_skills_tutorial/agent_skills_tutorial/: agent.py  config.py  skills.py
coder_agent/coder_agent/sandbox_agent/: README.md  agent.py
coder_agents/: README.md
coder_agents/container_agent/: README.md  agent.py
coder_agents/sandbox_agent/: README.md  agent.py
coder_agents/unsafe_agent/: README.md  agent.py
coder_agents/w_tools_agent/: README.md  agent.py  main.py  tools.py
deep_search/backend/app/: config.py
financial_advisor/: README.md  test_agent_chain.py  test_ddg.py  test_model_tags.py  test_model_tags_2.py
financial_advisor/financial_advisor/: agent.py  callbacks.py  hooks.py
financial_advisor/financial_advisor/sub_agents/data_analyst/: agent.py  prompt.py  tools.py
financial_advisor/financial_advisor/sub_agents/execution_analyst/: agent.py
financial_advisor/financial_advisor/sub_agents/risk_analyst/: agent.py
financial_advisor/financial_advisor/sub_agents/trading_analyst/: agent.py
searxng_search/: README.md  pyproject.toml
searxng_search/searxng_search_agent/: agent.py
youtube_analyst/: README.md
youtube_analyst/youtube_analyst/: __init__.py  agent.py  config.py  prompt.py  skills.py  tools.py
youtube_analyst/youtube_analyst/sub_agents/visualization/: agent.py  prompt.py  tools.py
